# Allergen-Aware-

./: .env  .env.local  .gitignore  API_DOCUMENTATION.md  Dockerfile  LOCALHOST_SETUP.md  QUICK_START.md  README.md  README_BACKEND.md  config_with_keys.py  database_setup.sql  docker-compose.yml  env  env.backend.example  env.example  env.frontend.example  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  setup.py  setup_env.py  test_setup.py
Backend/: .env  fatsecret.py
app/: __init__.py  auth.py  config.py  firebase.py  main.py
app/models/: allergen.py  food.py  user.py
app/routes/: foods.py  scan.py  users.py
app/services/: fatsecret.py  gemini.py
app/utils/: __init__.py  helpers.py
src/: App.tsx  index.css
src/components/: AnalysisResultsPage.tsx  CameraScanPage.tsx  EducationalCard.tsx  EducationalCardsCarousel.tsx  EducationalCardsModal.tsx  FavoritesPage.tsx  HomePage.tsx  LanguageSwitcher.tsx  Navigation.tsx  NutritionShowcase.tsx  NutritionSummary.tsx  OnboardingAllergenPage.tsx  ProfileSetupPage.tsx  SettingsPage.tsx  ShieldUtensilIcon.tsx  ThemeSwitcher.tsx  WelcomePage.tsx
src/contexts/: FavoriteCardsContext.tsx  LanguageContext.tsx  ThemeContext.tsx
src/data/: educationalCards.ts
src/lib/: api.ts
src/pages/: Login.tsx  Register.tsx
src/styles/: globals.css
src/supabase/functions/server/: index.tsx  kv_store.tsx
src/translations/: ar.ts  en.ts  es.ts  index.ts
src/utils/supabase/: info.tsx
